--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div class=main>
           <div class=details>
             <div class=tinyHeader>
-              <img id=mini src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579" alt="mini">
-              <h2 id=about>Bitcoin</h2>
+              <img id=mini src="images/cc_logo.png" alt="mini">
+              <h2 id=about>Crypto</h2>
             </div>
             <ul>
               <li class=facts>Current Value: $<span class="val">0000</span> USD</li>
@@ -72,18 +72,18 @@
               <li class=facts>Liquidity Value: <span class="liquidity">00.000</span></li>
               <li class=facts>COINGECKO Score: <span class="coingecko">00.000</span></li>
               <li class=facts>DEV Score: <span class="dev">000.000</span></li>
-              <li class=facts>Upvote %: <span class="upvote">00.00</span>%</li>
-              <li class=facts>Downvote %: <span class="downvote">00.00</span>%</li>
+              <li class=facts>Upvotes: <span class="upvote">00.00</span>%</li>
+              <li class=facts>Downvotes: <span class="downvote">00.00</span>%</li>
             </ul>
           </div>
           <div class=description>
-            <p class=more>Bitcoin is the first successful internet money based on peer-to-peer technology; whereby no central bank or authority is involved in the transaction and production of the Bitcoin currency. It was created by an anonymous individual/group under the name, Satoshi Nakamoto. The source code is available publicly as an open source project, anybody can look at it and be part of the developmental process. Bitcoin is changing the way we see money as we speak. The idea was to produce a means of exchange, independent of any central authority, that could be transferred electronically in a secure, verifiable and immutable way. It is a decentralized peer-to-peer internet currency making mobile payment easy, very low transaction fees, protects your identity, and it works anywhere all the time with no central authority and banks. Bitcoin is designed to have only 21 million BTC ever created, thus making it a deflationary currency. Bitcoin uses the SHA-256 hashing algorithm with an average transaction confirmation time of 10 minutes. Miners today are mining Bitcoin using ASIC chip dedicated to only mining Bitcoin, and the hash rate has shot up to peta hashes. Being the first successful online cryptography currency, Bitcoin has inspired other alternative currencies such as Litecoin, Peercoin, Primecoin, and so on. The cryptocurrency then took off with the innovation of the turing-complete smart contract by Ethereum which led to the development of other amazing projects such as EOS, Tron, and even crypto-collectibles such as CryptoKitties.</p>
+            <p class=more>Please select a cryptocurrency to get started...</p>
           </div>
         </div>
       </div>
       <footer>
         <div class=bottom>
-          <p><span class="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en">COINGECKO</a></p>
+          <p><span class="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en" >coingecko</a></p>
           <img id="github" src="images/github.png" alt="github"><a href="https://github.com/troubleshoot" class="link">github</a>
         </div>
       </footer>
