--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CRYPTO CRAZE</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/cc_logo.png" type="image">
+  <link rel="icon" href="images/cc_logo.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(document).ready(function(){
@@ -28,10 +28,22 @@
           })
         .catch(error => console.log(error));
       }
+      
       $("#go").click(function(){
           getCrypto($("#crypto").val());
           search++;
           $(".search-count").text(search);
+      })
+
+      $("#go").hover(function(){
+        $(this).css('background','rgb(208,116,233)');
+      },
+      function(){
+        $("#go").css('background','rgb(250,89,7)');
+      });
+
+      $("#github").hover(function(){
+        alert("Check out my github!");
       })
     })
   </script>
@@ -56,6 +68,10 @@
             <option value="cosmos">ATOM</option>
             <option value="monero">XMR</option>
             <option value="tron">TRX</option>
+            <option value="tether">USDT</option>
+            <option value="polkadot">DOT</option>
+            <option value="iota">MIOTA</option>
+            <option value="tezos">XTZ</option>
           </select> 
           <button id="go">GO</button>
         </div>
@@ -77,13 +93,13 @@
             </ul>
           </div>
           <div class=description>
-            <p class=more>Please select a cryptocurrency to get started...</p>
+            <p>          <span class=more>Please select a cryptocurrency to get started...</span></p>
           </div>
         </div>
       </div>
       <footer>
         <div class=bottom>
-          <p><span class="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en" >coingecko</a></p>
+          <p class="counter"><span class="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en" >coingecko</a></p>
           <img id="github" src="images/github.png" alt="github"><a href="https://github.com/troubleshoot" class="link">github</a>
         </div>
       </footer>
