--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             $("#about").text(`${response.name}`)
             $("#mini").attr("src", response.image.large)
             $("#mini").attr("alt", `Picture of ${response.name}`);
-            $(".val").text(`${response.market_data.current_price.usd}`)
-            $(".founded").text(`${response.genesis_date}`)
-            $(".market_cap").text(`${response.market_cap_rank}`)
-            $(".liquidity").text(`${response.liquidity_score}`)
-            $(".coingecko").text(`${response.coingecko_rank}`)
-            $(".dev").text(`${response.developer_score}`)
-            $(".upvote").text(`${response.sentiment_votes_up_percentage}`)
-            $(".downvote").text(`${response.sentiment_votes_down_percentage}`)
+            $("#val").text(`${response.market_data.current_price.usd}`)
+            $("#founded").text(`${response.genesis_date}`)
+            $("#market_cap").text(`${response.market_cap_rank}`)
+            $("#liquidity").text(`${response.liquidity_score}`)
+            $("#coingecko").text(`${response.coingecko_rank}`)
+            $("#dev").text(`${response.developer_score}`)
+            $("#upvote").text(`${response.sentiment_votes_up_percentage}`)
+            $("#downvote").text(`${response.sentiment_votes_down_percentage}`)
             $("#update").text(`${response.last_updated}`)
-            $(".more").html(`${response.description.en}`)
+            $("#more").html(`${response.description.en}`)
           })
         .catch(error => console.log(error));
       }
@@ -33,7 +33,7 @@
       $("#go").click(function(){
           getCrypto($("#crypto").val());
           search++;
-          $(".search-count").text(search);
+          $("#search-count").text(search);
       })
 
       $("#go").hover(function(){
@@ -50,12 +50,12 @@
   </script>
   </head>
   <body>
-    <div class="header">
+    <div id="header">
       <img id="logo" src="images/cc_logo.png" alt="cc_logo">
       <h1><span style="color:rgb(208,116,233);">CR</span><span style="color:rgb(137,76,212);">YP</span><span style="color:rgb(76,73,206);">TO</span> <span style="color:rgb(253,214,1);">CR</span><span style="color:rgb(253,133,4);">A</span><span style="color:rgb(250,89,7);">ZE</span></h1>
     </div>
-    <div class="info">
-      <div class="choose">
+    <div id="info">
+      <div id="choose">
         <label for="crypto" id=choose_text>CHOOSE A CRYPTO</label>
         <select name="crypto" id="crypto">
           <option value="bitcoin">BTC</option>
@@ -75,33 +75,33 @@
         </select> 
         <button id="go">GO</button>
       </div>
-      <div class=main>
-        <div class=details>
-          <div class=tinyHeader>
+      <div id=main>
+        <div id=details>
+          <div id=tinyHeader>
             <img id=mini src="images/cc_logo.png" alt="mini">
             <h2 id=about>Crypto</h2>
           </div>
           <ul>
-            <li class=facts>Current Value: $<span class="val">0000</span> USD</li>
-            <li class=facts>Founded: <span class="founded">0000-00-00</span></li>
-            <li class=facts>Market Cap Rank: <span class="market_cap">0</span></li>
-            <li class=facts>Liquidity Value: <span class="liquidity">00.000</span></li>
-            <li class=facts>COINGECKO Score: <span class="coingecko">00.000</span></li>
-            <li class=facts>DEV Score: <span class="dev">000.000</span></li>
-            <li class=facts>Upvotes: <span class="upvote">00.00</span>%</li>
-            <li class=facts>Downvotes: <span class="downvote">00.00</span>%</li>
+            <li class=facts>Current Value: $<span id="val">0000</span> USD</li>
+            <li class=facts>Founded: <span id="founded">0000-00-00</span></li>
+            <li class=facts>Market Cap Rank: <span id="market_cap">0</span></li>
+            <li class=facts>Liquidity Value: <span id="liquidity">00.000</span></li>
+            <li class=facts>COINGECKO Score: <span id="coingecko">00.000</span></li>
+            <li class=facts>DEV Score: <span id="dev">000.000</span></li>
+            <li class=facts>Upvotes: <span id="upvote">00.00</span>%</li>
+            <li class=facts>Downvotes: <span id="downvote">00.00</span>%</li>
           </ul>
           <p id="update"></p>
         </div>
-        <div class=description>
-          <p>          <span class=more>Please select a cryptocurrency to get started...</span></p>
+        <div id=description>
+          <p>          <span id=more>Please select a cryptocurrency to get started...</span></p>
         </div>
       </div>
     </div>
     <footer>
-      <div class=bottom>
-        <p class="counter"><span class="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en" >coingecko</a></p>
-        <img id="github" src="images/github.png" alt="github"><a href="https://github.com/troubleshoot" class="link">github</a>
+      <div id=bottom>
+        <p id="counter"><span id="search-count">0</span> searches powered by <a href="https://www.coingecko.com/en" >coingecko</a></p>
+        <img id="github" src="images/github.png" alt="github"><a href="https://github.com/troubleshoot" id="link">github</a>
       </div>
     </footer>
   </body>
